# workflow-srv

./: pyproject.toml  test.sh
.github/workflows/: ci.yaml  lint.yml  release-image.yaml  reusable-docker-build-push.yaml
examples/email_reviewer_agentless/: README.md  pyproject.toml
examples/email_reviewer_agentless/deploy/: .email_reviewer.env  email_reviewer_agentless.json
examples/email_reviewer_agentless/email_reviewer/: __init__.py  generate_manifest.py
mailcomposer/: README.md  main.py  pyproject.toml
mailcomposer/mailcomposer/: mailcomposer.py
src/agent_workflow_server/: main.py
src/agent_workflow_server/agents/: agentless.py  base.py  generator.py  load.py  oas_generator.py  pydantic_ai.py
src/agent_workflow_server/agents/adapters/: agentless.py  langgraph.py  llamaindex.py
src/agent_workflow_server/apis/: agents.py  authentication.py  runs.py  stateless_runs.py  threads.py  threads_runs.py
src/agent_workflow_server/depends/: authentication.py  model_validator.py
src/agent_workflow_server/services/: queue.py  runs.py  thread_runs.py  thread_state.py  threads.py  validation.py
src/agent_workflow_server/storage/: models.py  service.py  storage.py
src/agent_workflow_server/validation/: validation.py
tests/: mock.py  mock_manifest.json  test_auth.py  test_generator.py  test_llamaindex_adapter.py  test_load.py  test_runs.py  test_threads.py  test_validation.py  tools.py
tests/agents/: jokeflow.py  jokeflow_manifest.json  jokereviewer.py  jokereviewer_manifest.json  mailcomposer.json  mailcomposer.py
